--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
   </head>
-  <body class="font-sans  bg-gray">
+  <body class="font-sans bg-primarygray ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
